[package]
name = "ross-bootloader"
version = "0.1.0"
authors = ["Linas Nikiperavičius <linas@linasdev.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.14"
cortex-m-semihosting = "0.3.7"
alloc-cortex-m = "0.4.1"
panic-semihosting = "0.5.6"
embedded-hal = "0.2.5"
bxcan = "0.4.0"
nb = "1.0.0"
eeprom24x = "0.3.0"

[dependencies.stm32f1xx-hal]
git = "https://github.com/stm32-rs/stm32f1xx-hal"
features = ["rt", "stm32f103", "medium"]

[dependencies.ross-eeprom]
git = "https://github.com/linasdev/ross-eeprom"
