[package]
name = "ross-bootloader"
version = "1.0.0"
authors = ["Linas Nikiperavičius <linas@linasdev.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "Bootloader for the Rusty Old Smart System"
repository = "https://github.com/linasdev/ross-bootloader"
readme = "README.md"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.14"
alloc-cortex-m = "0.4.1"
panic-itm = "0.4.2"
embedded-hal = "0.2.5"
bxcan = "0.4.0"
nb = "1.0.0"
eeprom24x = "0.3.0"
ross-eeprom = "1.0.1"
ross-protocol = "1.1.0"

[dependencies.stm32f1xx-hal]
version = "0.7.0"
git = "https://github.com/stm32-rs/stm32f1xx-hal"
features = ["rt", "stm32f103", "medium"]
